Improve header spacing and item disposition (search bar still needs fixes)

--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -1,4 +1,6 @@
 .dropdown-menu{
+    line-height: 1.75rem;
+
     .dropdown-item{
         &.active{
             background-color: #f3f3f3;
